<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright 2021 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="for_you">購物</string>
    <string name="episodes">Episodes</string>
    <string name="done">Done</string>
    <string name="for_you_loading">Loading for you…</string>
    <string name="navigate_up">Navigate up</string>
    <string name="onboarding_guidance_title">What are you interested in?</string>
    <string name="onboarding_guidance_subtitle">Updates from topics you follow will appear here. Follow some things to get started.</string>
    <string name="top_app_bar_title">For you</string>
    <string name="for_you_top_app_bar_action_my_account">My account</string>
    <string name="for_you_top_app_bar_action_search">Search</string>

    <!-- Authors-->
    <string name="following">You are following</string>
    <string name="not_following">You are not following</string>

</resources>
